WiseUpTi-SalesForce/Wise Up Sales Force/src/objects/Triggers__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>LeadTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>LeadTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membros_Campanha_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Membros Campanha Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oli_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oli trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oportunidade_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oportunidade_Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Triggers</label>
</CustomObject>